# MMOSinal-Tauri

./: .gitignore  CHANGELOG.md  index.html  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-0ba57191132c0e89e9b793476d6c0df5ebba60d5b3fb6a713f43d7d34d1dd225.json  query-0c2f03da0e9a41f63c671d3faa06e23806958aa2caf0287a088d0b3b8a0761db.json  query-12b8f22d974083f78fa1992fea1639d591e06f12b9613be94382a556e6d90e3b.json  query-18b237e0ed740b37dd28e33d519f7ae5bdf8e4cbba76d986e6f799cf4a979911.json  query-2f3ea54259638f6d058441e60663f8360dfe1558ade939cf6c70c93d0ed4fc9a.json  query-39e180512ac405a1d3aacf06b0b212363d1334a35c17c18315bce8a1c69cbd0f.json  query-3bb36409e5e3b0389463e32d45cd5f2fa5a9493977e1ccf6a97d662397cbdd43.json  query-3c2aeb9d9c0e2959bc01672e888237a8363a36be3c143ac2d334198c031dcac2.json  query-3f739b4bdea39b9874722dbf81ac3616efbca7b9905dd6b1d6627d570a31fc34.json  query-43e10eb8ca0324f74884ed57927a74ba9df9a07fe8b314a70e955a67369255fe.json  query-45513ea8f511734e59f2e1feb77a5f2862d0d091ccbadf3389a0703cec03aefd.json  query-45ade0b29a69763a2f5994f0fcdb80cfad008b671deccc8bb45e54e567e38d3d.json  query-4e1f1a6e73a48d905ba56ddf0bb6b0bb583caded9eea272d499d11a733b2e9ec.json  query-528b4751095bf11424b25b04048c7ef1237840b4560bfd5fd9cffdf26cbc4a45.json  query-54c8ef386035580388d6753d7d7cb91e3536e0fa9e679f15f90577279636478d.json  query-6051b61a4765fbcadb395be81cc370aac959563fa99772c9f0daff11a6d78aa6.json  query-640a49745f63bd0a084c623995244389e910a38c589d63dfef1b082203ac6178.json  (+41 more)
src-tauri/capabilities/: default.json
(+100 files in other folders)
